--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!--
+  ~ Copyright (c) 2018 The Jaxxy Authors.
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~ http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -19,7 +35,9 @@
         <!--
         Dependencies
         -->
+        <annotation.version>1.3</annotation.version>
         <assertj.version>3.11.0</assertj.version>
+        <auth0.jwt.version>3.4.0</auth0.jwt.version>
         <commons.lang3.version>3.8</commons.lang3.version>
         <cxf.version>3.2.6</cxf.version>
         <jaxrs.version>2.1</jaxrs.version>
@@ -37,6 +55,11 @@
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
         </dependency>
 
         <dependency>
@@ -71,6 +94,13 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${annotation.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <!--
@@ -142,6 +172,7 @@
                 <version>${commons.lang3.version}</version>
             </dependency>
 
+
             <!--
             Testing
             -->
@@ -172,6 +203,13 @@
                 <version>${slf4j.version}</version>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>com.auth0</groupId>
+                <artifactId>java-jwt</artifactId>
+                <version>${auth0.jwt.version}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -179,6 +217,7 @@
         <module>util</module>
         <module>jsonb</module>
         <module>cors</module>
+        <module>security</module>
         <module>test</module>
     </modules>
 
