--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
+        <sonar.exclusions>org/jaxxy/test/**/*</sonar.exclusions>
         <!--
         Dependencies
         -->
