--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <sonar.exclusions>org/jaxxy/test/**/*</sonar.exclusions>
+        <sonar.exclusions>/src/main/java/org/jaxxy/test/**/*</sonar.exclusions>
         <!--
         Dependencies
         -->
