--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -26,9 +26,9 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>jaxxy-jsonb</artifactId>
+    <artifactId>jaxxy-gson</artifactId>
 
-    <name>Jaxxy :: JSON-B Provider</name>
+    <name>Jaxxy :: GSON Provider</name>
 
     <dependencies>
 
@@ -38,26 +38,8 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.json.bind</groupId>
-            <artifactId>javax.json.bind-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.json</groupId>
-            <artifactId>javax.json-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.johnzon</groupId>
-            <artifactId>johnzon-jsonb</artifactId>
-            <version>${johnzon.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.johnzon</groupId>
-            <artifactId>johnzon-core</artifactId>
-            <version>${johnzon.version}</version>
-            <scope>test</scope>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
         </dependency>
 
         <dependency>
