--- a/jsonb/pom.xml
+++ b/jsonb/pom.xml
@@ -62,6 +62,12 @@
 
         <dependency>
             <groupId>org.jaxxy</groupId>
+            <artifactId>jaxxy-io</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-test</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>test</scope>
