--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
         <assertj.version>3.11.0</assertj.version>
         <auth0.jwt.version>3.4.0</auth0.jwt.version>
         <commons.lang3.version>3.8</commons.lang3.version>
+        <commons.io.version>2.6</commons.io.version>
         <cxf.version>3.2.6</cxf.version>
         <gson.version>2.8.5</gson.version>
         <jaxrs.version>2.1</jaxrs.version>
@@ -79,6 +80,7 @@
         <lombok.version>1.18.2</lombok.version>
         <mockito.version>2.21.0</mockito.version>
         <protobuf.version>3.6.1</protobuf.version>
+        <rxjava.version>2.2.2</rxjava.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <slf4j.version>1.7.25</slf4j.version>
 
@@ -94,6 +96,7 @@
         <module>jsonb</module>
         <module>logging</module>
         <module>protobuf</module>
+        <module>rxjava</module>
         <module>security</module>
         <module>test</module>
         <module>util</module>
