--- a/rxjava/pom.xml
+++ b/rxjava/pom.xml
@@ -26,11 +26,16 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>jaxxy-io</artifactId>
+    <artifactId>jaxxy-rxjava</artifactId>
 
-    <name>Jaxxy :: I/O Providers</name>
+    <name>Jaxxy :: RxJava</name>
 
     <dependencies>
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>${rxjava.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -39,21 +44,8 @@
 
         <dependency>
             <groupId>org.jaxxy</groupId>
-            <artifactId>jaxxy-util</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-test</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons.io.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
