--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
         <lombok.version>1.18.2</lombok.version>
         <mockito.version>2.21.0</mockito.version>
         <protobuf.version>3.6.1</protobuf.version>
+        <reactor.version>3.1.9.RELEASE</reactor.version>
         <rxjava.version>2.2.2</rxjava.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <slf4j.version>1.7.25</slf4j.version>
@@ -96,6 +97,7 @@
         <module>jsonb</module>
         <module>logging</module>
         <module>protobuf</module>
+        <module>reactor</module>
         <module>rxjava</module>
         <module>security</module>
         <module>test</module>
