--- a/example/src/main/resources/application.properties
+++ b/example/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
-#  
+#
 # http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
@@ -14,13 +14,7 @@
 # limitations under the License.
 #
 
-# Root logger option
-log4j.rootLogger=INFO, stdout
+cxf.path=/api
+cxf.jaxrs.component-scan=true
 
-# Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %5p %c{1} %X - %m%n
-
-log4j.logger.org.jaxxy=DEBUG
+logging.level.org.apache.cxf.services=WARN
