--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,8 @@
         <rxjava.version>2.2.2</rxjava.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <spring.boot.version>2.0.4.RELEASE</spring.boot.version>
+        <swagger.ui.version>3.18.2</swagger.ui.version>
 
     </properties>
 
@@ -159,7 +161,6 @@
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
                 <version>${annotation.version}</version>
-                <scope>provided</scope>
             </dependency>
 
             <!--
@@ -169,7 +170,6 @@
                 <groupId>javax.ws.rs</groupId>
                 <artifactId>javax.ws.rs-api</artifactId>
                 <version>${jaxrs.version}</version>
-                <scope>provided</scope>
             </dependency>
 
             <!--
@@ -179,7 +179,6 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
                 <version>${servlet.api.version}</version>
-                <scope>provided</scope>
             </dependency>
 
             <!--
@@ -189,7 +188,6 @@
                 <groupId>javax.json.bind</groupId>
                 <artifactId>javax.json.bind-api</artifactId>
                 <version>${jsonb.version}</version>
-                <scope>provided</scope>
             </dependency>
 
             <!--
@@ -199,7 +197,6 @@
                 <groupId>javax.json</groupId>
                 <artifactId>javax.json-api</artifactId>
                 <version>${jsonp.version}</version>
-                <scope>provided</scope>
             </dependency>
 
             <!--
@@ -229,6 +226,18 @@
                 <version>${cxf.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-rs-service-description-swagger</artifactId>
+                <version>${cxf.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-rs-service-description</artifactId>
+                <version>${cxf.version}</version>
+            </dependency>
+
             <!--
             MISC
             -->
@@ -254,6 +263,12 @@
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
                 <version>${protobuf.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>swagger-ui</artifactId>
+                <version>${swagger.ui.version}</version>
             </dependency>
 
             <!--
