--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <commons.io.version>2.6</commons.io.version>
         <cxf.version>3.2.6</cxf.version>
         <gson.version>2.8.5</gson.version>
+        <jackson.version>2.9.6</jackson.version>
         <jaxrs.version>2.1</jaxrs.version>
         <johnzon.version>1.1.8</johnzon.version>
         <jsonb.version>1.0</jsonb.version>
