Removing SnakeYAML, since Jackson's YAML provider provides much better support.

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -73,6 +73,11 @@
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-yaml-provider</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-logging</artifactId>
             <version>0.0.1-SNAPSHOT</version>
