--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
         <!--
         Dependencies
         -->
+        <activation.version>1.1.1</activation.version>
         <annotation.version>1.3</annotation.version>
         <assertj.version>3.11.0</assertj.version>
         <auth0.jwt.version>3.4.0</auth0.jwt.version>
@@ -74,6 +75,7 @@
         <gson.version>2.8.5</gson.version>
         <jackson.version>2.9.6</jackson.version>
         <jaxrs.version>2.1</jaxrs.version>
+        <jaxws.version>2.3.0</jaxws.version>
         <johnzon.version>1.1.8</johnzon.version>
         <jsonb.version>1.0</jsonb.version>
         <jsonp.version>1.1.2</jsonp.version>
@@ -151,6 +153,18 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <dependency>
+                <groupId>javax.xml.ws</groupId>
+                <artifactId>jaxws-api</artifactId>
+                <version>${jaxws.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.activation</groupId>
+                <artifactId>activation</artifactId>
+                <version>${activation.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -324,23 +338,23 @@
             <plugins>
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.1.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.0.2</version>
+                    <version>3.1.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.7.0</version>
+                    <version>3.8.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.20.1</version>
+                    <version>2.22.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.0.2</version>
+                    <version>3.1.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-install-plugin</artifactId>
