--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.jaxxy</groupId>
     <artifactId>jaxxy</artifactId>
-    <version>0.0.5-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <name>Jaxxy</name>
@@ -456,6 +456,9 @@
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <useAgent>false</useAgent>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
