--- a/example/pom.xml
+++ b/example/pom.xml
@@ -34,8 +34,8 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.0.4.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -91,27 +91,22 @@
         <dependency>
             <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-logging</artifactId>
-            <version>0.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-jsonb</artifactId>
-            <version>0.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-cors</artifactId>
-            <version>0.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-gson</artifactId>
-            <version>0.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-protobuf</artifactId>
-            <version>0.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.johnzon</groupId>
@@ -123,8 +118,15 @@
         <dependencies>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
+                <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jaxxy</groupId>
+                <artifactId>jaxxy-bom</artifactId>
+                <version>0.0.3-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
