--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
         <module>security</module>
         <module>test</module>
         <module>util</module>
+        <module>bom</module>
     </modules>
 
     <dependencies>
@@ -377,6 +378,10 @@
                 <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>3.0.0-M1</version>
+                    <configuration>
+                        <deployAtEnd>true</deployAtEnd>
+                        <retryFailedDeploymentCount>3</retryFailedDeploymentCount>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-source-plugin</artifactId>
