--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
         <commons.io.version>2.6</commons.io.version>
         <cxf.version>3.2.7</cxf.version>
         <gson.version>2.8.5</gson.version>
+        <guava.version>20.0</guava.version>
         <jackson.version>2.9.6</jackson.version>
         <jaxrs.version>2.1</jaxrs.version>
         <jaxws.version>2.3.0</jaxws.version>
@@ -101,7 +102,7 @@
         <rxjava.version>2.2.2</rxjava.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <spring.boot.version>2.1.0.RELEASE</spring.boot.version>
+        <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
         <swagger.ui.version>3.18.2</swagger.ui.version>
 
     </properties>
@@ -113,11 +114,13 @@
         <module>cors</module>
         <module>example</module>
         <module>gson</module>
+        <module>guava</module>
         <module>io</module>
         <module>jsonb</module>
         <module>logging</module>
         <module>protobuf</module>
         <module>reactor</module>
+        <module>rx</module>
         <module>rxjava</module>
         <module>security</module>
         <module>test</module>
@@ -281,6 +284,12 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>${gson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
 
             <dependency>
