--- a/rxjava/pom.xml
+++ b/rxjava/pom.xml
@@ -30,6 +30,13 @@
     <name>Jaxxy :: RxJava</name>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.jaxxy</groupId>
+            <artifactId>jaxxy-rx</artifactId>
+            <version>0.0.3-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxjava</artifactId>
