--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -69,12 +69,17 @@
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
+                <artifactId>jaxxy-protobuf</artifactId>
+                <version>0.4.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-reactor</artifactId>
                 <version>0.4.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jaxxy</groupId>
-                <artifactId>jaxxy-protobuf</artifactId>
+                <artifactId>jaxxy-rx</artifactId>
                 <version>0.4.0-SNAPSHOT</version>
             </dependency>
             <dependency>
