--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.jaxxy</groupId>
@@ -35,7 +36,7 @@
             <name>James Carman</name>
         </developer>
     </developers>
-    
+
     <licenses>
         <license>
             <name>Apache 2</name>
@@ -49,8 +50,8 @@
         <url>https://github.com/jaxxy-rs/jaxxy</url>
         <connection>scm:git:git@github.com:jaxxy-rs/jaxxy.git</connection>
         <developerConnection>scm:git:git@github.com:jaxxy-rs/jaxxy.git</developerConnection>
-      <tag>jaxxy-0.3.0</tag>
-  </scm>
+        <tag>jaxxy-0.3.0</tag>
+    </scm>
 
     <distributionManagement>
         <snapshotRepository>
@@ -85,15 +86,26 @@
         <auth0.jwt.version>3.4.0</auth0.jwt.version>
         <commons.lang3.version>3.8.1</commons.lang3.version>
         <commons.io.version>2.6</commons.io.version>
-        <cxf.version>3.2.7</cxf.version>
+        <cxf.version>3.3.1</cxf.version>
         <gson.version>2.8.5</gson.version>
         <guava.version>20.0</guava.version>
         <jackson.version>2.9.6</jackson.version>
-        <jaxrs.version>2.1</jaxrs.version>
+
+        <jakarta.activation.version>1.2.1</jakarta.activation.version>
+        <jakarta.annotation.version>1.3.4</jakarta.annotation.version>
+        <jakarta.ws.rs.version>2.1.5</jakarta.ws.rs.version>
+        <jakarta.xml.bind.version>2.3.2</jakarta.xml.bind.version>
+
+        <activation.version>1.2.1</activation.version>
+        <annotation.version>1.3.4</annotation.version>
+        <jaxrs.version>2.1.5</jaxrs.version>
+        <jaxb.version>2.3.2</jaxb.version>
+
+
         <jaxws.version>2.3.0</jaxws.version>
         <johnzon.version>1.1.10</johnzon.version>
-        <jsonb.version>1.0</jsonb.version>
-        <jsonp.version>1.1.2</jsonp.version>
+        <jsonb.version>1.0.1</jsonb.version>
+        <jsonp.version>1.1.5</jsonp.version>
         <junit.version>4.11</junit.version>
         <lombok.version>1.18.4</lombok.version>
         <mockito.version>2.21.0</mockito.version>
@@ -102,8 +114,9 @@
         <rxjava.version>2.2.2</rxjava.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
-        <swagger.ui.version>3.18.2</swagger.ui.version>
+        <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
+        <swagger.version>1.5.22</swagger.version>
+        <swagger.ui.version>3.20.9</swagger.ui.version>
 
     </properties>
 
@@ -129,19 +142,10 @@
     </modules>
 
     <dependencies>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-        </dependency>
 
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
         </dependency>
 
         <dependency>
@@ -173,53 +177,54 @@
         <dependencies>
 
             <dependency>
-                <groupId>javax.xml.ws</groupId>
-                <artifactId>jaxws-api</artifactId>
-                <version>${jaxws.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>javax.activation</groupId>
-                <artifactId>activation</artifactId>
-                <version>${activation.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>javax.annotation</groupId>
-                <artifactId>javax.annotation-api</artifactId>
-                <version>${annotation.version}</version>
+                <groupId>jakarta.activation</groupId>
+                <artifactId>jakarta.activation-api</artifactId>
+                <version>${jakarta.activation.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>${jakarta.annotation.version}</version>
             </dependency>
 
             <!--
             JAX-RS (JSR 370)
             -->
             <dependency>
-                <groupId>javax.ws.rs</groupId>
-                <artifactId>javax.ws.rs-api</artifactId>
-                <version>${jaxrs.version}</version>
+                <groupId>jakarta.ws.rs</groupId>
+                <artifactId>jakarta.ws.rs-api</artifactId>
+                <version>${jakarta.ws.rs.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>jakarta.servlet</groupId>
+                <artifactId>jakarta.servlet-api</artifactId>
+                <version>4.0.2</version>
             </dependency>
 
             <!--
-            Servlet API
+            JAX-B
             -->
             <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>${servlet.api.version}</version>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${jakarta.xml.bind.version}</version>
             </dependency>
+
 
             <!--
             JSON-B (JSR 367)
             -->
             <dependency>
-                <groupId>javax.json.bind</groupId>
-                <artifactId>javax.json.bind-api</artifactId>
+                <groupId>jakarta.json.bind</groupId>
+                <artifactId>jakarta.json.bind-api</artifactId>
                 <version>${jsonb.version}</version>
             </dependency>
 
@@ -227,8 +232,8 @@
             JSON-P
             -->
             <dependency>
-                <groupId>javax.json</groupId>
-                <artifactId>javax.json-api</artifactId>
+                <groupId>jakarta.json</groupId>
+                <artifactId>jakarta.json-api</artifactId>
                 <version>${jsonp.version}</version>
             </dependency>
 
@@ -277,6 +282,11 @@
                 <version>${cxf.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-testutils</artifactId>
+                <version>${cxf.version}</version>
+            </dependency>
             <!--
             MISC
             -->
@@ -315,6 +325,31 @@
                 <artifactId>swagger-ui</artifactId>
                 <version>${swagger.ui.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-core</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-jaxrs</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-models</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+
 
             <!--
             Testing
