--- a/security/pom.xml
+++ b/security/pom.xml
@@ -34,6 +34,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-util</artifactId>
