--- a/test/src/main/resources/log4j.properties
+++ b/test/src/main/resources/log4j.properties
@@ -21,6 +21,14 @@ log4j.rootLogger=INFO, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %5p %c{1} - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %5p %c - %m%n
+
+log4j.logger.org.apache.cxf.services=WARN
+log4j.logger.org.apache.cxf.endpoint.ServerImpl=WARN
+log4j.logger.org.apache.cxf.jaxrs.utils.JAXRSUtils=ERROR
+
+log4j.logger.org.eclipse.jetty=ERROR
+
+
 
 log4j.logger.org.jaxxy=DEBUG
