converting to MP rest client

--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,13 @@
                 <artifactId>cxf-testutils</artifactId>
                 <version>${cxf.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-rs-mp-client</artifactId>
+                <version>${cxf.version}</version>
+            </dependency>
+
             <!--
             MISC
             -->
