--- a/test/pom.xml
+++ b/test/pom.xml
@@ -68,5 +68,9 @@
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-transports-http-hc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-mp-client</artifactId>
+        </dependency>
     </dependencies>
 </project>
