--- a/pom.xml
+++ b/pom.xml
@@ -80,8 +80,6 @@
         <!--
         Dependencies
         -->
-        <activation.version>1.1.1</activation.version>
-        <annotation.version>1.3</annotation.version>
         <assertj.version>3.11.1</assertj.version>
         <auth0.jwt.version>3.4.0</auth0.jwt.version>
         <commons.lang3.version>3.8.1</commons.lang3.version>
@@ -96,17 +94,10 @@
         <jakarta.ws.rs.version>2.1.5</jakarta.ws.rs.version>
         <jakarta.xml.bind.version>2.3.2</jakarta.xml.bind.version>
 
-        <activation.version>1.2.1</activation.version>
-        <annotation.version>1.3.4</annotation.version>
-        <jaxrs.version>2.1.5</jaxrs.version>
-        <jaxb.version>2.3.2</jaxb.version>
-
-
-        <jaxws.version>2.3.0</jaxws.version>
         <johnzon.version>1.1.10</johnzon.version>
         <jsonb.version>1.0.1</jsonb.version>
         <jsonp.version>1.1.5</jsonp.version>
-        <junit.version>4.11</junit.version>
+        <junit.version>5.4.2</junit.version>
         <lombok.version>1.18.4</lombok.version>
         <mockito.version>2.21.0</mockito.version>
         <protobuf.version>3.6.1</protobuf.version>
@@ -162,14 +153,25 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
     </dependencies>
 
@@ -362,8 +364,14 @@
             Testing
             -->
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
                 <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -378,6 +386,13 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
                 <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
