--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.jaxxy</groupId>
     <artifactId>jaxxy</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <packaging>pom</packaging>
     <name>Jaxxy</name>
@@ -49,7 +49,7 @@
         <url>https://github.com/jaxxy-rs/jaxxy</url>
         <connection>scm:git:git@github.com:jaxxy-rs/jaxxy.git</connection>
         <developerConnection>scm:git:git@github.com:jaxxy-rs/jaxxy.git</developerConnection>
-        <tag>jaxxy-0.4.0</tag>
+        <tag>jaxxy-1.0.0</tag>
     </scm>
 
     <distributionManagement>
